Actualizando el estilo...

--- a/static/css/web2py_bootstrap.css
+++ b/static/css/web2py_bootstrap.css
@@ -261,4 +261,10 @@ div.controls .error {
         margin-right: -20px;
         margin-left: -20px;
     }
+    #span-inicio{
+      display: none;
+    }
+    #span-sesion{
+      display: none;
+    }
 }
