--- a/static/css/web2py.css
+++ b/static/css/web2py.css
@@ -36,7 +36,7 @@ audio {width:200px}
 .hidden {display:none;visibility:visible}
 .right {float:right; text-align:right}
 .left {float:left; text-align:left}
-.center {width:100%; text-align:center; vertical-align:middle}
+.center {width:100; text-align:center; vertical-align:middle}
 /** end **/
 
 /* Sticky footer begin */
@@ -289,9 +289,27 @@ div.error {
     font-weight:bold;
 }
 
+.web2py_breadcrumbs{
+    border-radius: 4px;
+    padding: 5px;
+    list-style: none;
+}
+
 .web2py_breadcrumbs ul {
     list-style:none;
-    margin-bottom:18px;
+    margin-left: 5px;
+    background-color: #F5F5F5;
+    border-radius: 5px;
+    padding: 5px;
+}
+.web2py_breadcrumbs ul li:before{
+    padding: 0 5px;
+    color: #5F6F81;
+    content: "\00a0";
+}
+.web2py_breadcrumbs ul li.active a{
+    color: #5F6F81;
+    text-decoration: none;
 }
 
 li.w2p_grid_breadcrumb_elem {
@@ -302,11 +320,6 @@ li.w2p_grid_breadcrumb_elem {
 .web2py_console input, .web2py_console select,
 .web2py_console a { margin: 2px; }
 
-.web2py_htmltable {
-   width: 100%;
-   overflow-x: auto;
-   -ms-overflow-x:scroll;
-}
 
 #wiki_page_body {
    width: 600px;
