--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,46 +1,10 @@
-{{left_sidebar_enabled,right_sidebar_enabled=False,('message' in globals())}}
 {{extend 'layout.html'}}
 
-{{if 'message' in globals():}}
-<h3>{{=message}}</h3>
+  <div class="page-header">
+    <h1>{{=message}}<br><small>General Ledger</small></h1>
+  </div>
 
-
-<a href="{{=URL('empresa','listar')}}">Empresa</a>
-<br>
-<a href="{{=URL('cc_empresa','listar')}}">Catalogo de Empresas</a>
-<br>
-<a href="{{=URL('asiento','listar')}}">Pólizas Contables</a>
-<br>
-<a href="{{=URL('cc_empresa','resumen')}}">Resumen de Cuentas</a>
-
-
-
-<h4>{{=T('How did you get here?')}}</h4>
-<ol>
-  <li>{{=T('You are successfully running web2py')}}</li>
-  <li>{{=XML(T('You visited the url %s', A(request.env.path_info,_href=request.env.path_info)))}}</li>
-  <li>{{=XML(T('Which called the function %s located in the file %s',
-             (A(request.function+'()',_href='#'),
-              A('web2py/applications/%(application)s/controllers/%(controller)s.py'%request,
-               _href=URL('admin','default','peek', args=(request.application,'controllers',request.controller+'.py'))))))}}</li>
-  <li>{{=XML(T('The output of the file is a dictionary that was rendered by the view %s',
-           A('web2py/applications/%(application)s/views/%(controller)s/index.html'%request,
-           _href=URL('admin','default','peek',args=(request.application,'views',request.controller,'index.html')))))}}</li>
-  <li>{{=T('You can modify this application and adapt it to your needs')}}</li>
-</ol>
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
-
-{{block right_sidebar}}
-{{=A(T("Administrative Interface"), _href=URL('admin','default','index'), _class='btn',
-     _style='margin-top: 1em;')}}
-<h6>{{=T("Don't know what to do?")}}</h6>
-<ul>
-  <li>{{=A(T("Online examples"), _href=URL('examples','default','index'))}}</li>
-  <li><a href="http://web2py.com">web2py.com</a></li>
-  <li><a href="http://web2py.com/book">{{=T('Documentation')}}</a></li>
-</ul>
-{{end}}
+<a href="{{=URL('empresa','listar')}}" class="btn btn-large btn-info">Empresa</a>
+<a href="{{=URL('cc_empresa','listar')}}" class="btn btn-large btn-info">Catalogo de Empresas</a>
+<a href="{{=URL('asiento','listar')}}" class="btn btn-large btn-info">Pólizas Contables</a>
+<a href="{{=URL('cc_empresa','resumen')}}" class="btn btn-large btn-info">Resumen de Cuentas</a>
