--- a/static/css/web2py.css
+++ b/static/css/web2py.css
@@ -92,36 +92,70 @@ div.flash {
     font-weight:bold;
     display:none;
     position:fixed;
-    padding:10px;
-    top:48px;
-    right:250px;
+    padding:16px;
+    top:55px;
+    right:13px;
     min-width:280px;
     opacity:0.95;
     margin:0px 0px 10px 10px;
     vertical-align:middle;
     cursor:pointer;
-    color:#fff;
-    background-color:#000;
-    border:2px solid #fff;
+    
     border-radius:8px;
     -o-border-radius: 8px;
     -moz-border-radius:8px;
     -webkit-border-radius:8px;
-    background-image: -webkit-linear-gradient(top,#222,#000);
-    background-image: -o-linear-gradient(top,#222,#000);
-    background-image: -moz-linear-gradient(90deg, #222, #000);
-    background-image: linear-gradient(top,#222,#000);
-    background-repeat: repeat-x;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     z-index:2000;
 }
+div.flash.flash-info{
+    color:#fff;
+    background-color:#000;
+    border:2px solid #007BBF;
+    background-image: -webkit-linear-gradient(top,#39B3D7,#0095E8);
+    background-image: -o-linear-gradient(top,#39B3D7,#0095E8);
+    background-image: -moz-linear-gradient(90deg, #39B3D7, #0095E8);
+    background-image: linear-gradient(top,#39B3D7,#0095E8);
+    background-repeat: repeat-x;
+}
+div.flash.flash-success{
+    color:#fff;
+    background-color:#000;
+    border:2px solid #47A447;
+    background-image: -webkit-linear-gradient(top,#47A447,#54C23D);
+    background-image: -o-linear-gradient(top,#47A447,#54C23D);
+    background-image: -moz-linear-gradient(90deg, #47A447, #54C23D);
+    background-image: linear-gradient(top,#47A447,#54C23D);
+    background-repeat: repeat-x;
+}
+div.flash.flash-alert{
+    color:#fff;
+    background-color:#000;
+    border:2px solid #EDC633;
+    background-image: -webkit-linear-gradient(top,#FFD537,#FFD537);
+    background-image: -o-linear-gradient(top,#FFD537,#FFD537);
+    background-image: -moz-linear-gradient(90deg, #FFD537, #FFD537);
+    background-image: linear-gradient(top,#FFD537,#FFD537);
+    background-repeat: repeat-x;
+}
+div.flash.flash-danger{
+    color:#fff;
+    background-color:#000;
+    border:2px solid #B50E0A;
+    background-image: -webkit-linear-gradient(top,#D2322D,#FF2717);
+    background-image: -o-linear-gradient(top,#D2322D,#FF2717);
+    background-image: -moz-linear-gradient(90deg, #D2322D, #FF2717);
+    background-image: linear-gradient(top,#D2322D,#FF2717);
+    background-repeat: repeat-x;
+}
 
 div.flash #closeflash{color:inherit; float:right; margin-left:15px;}
+
 .ie-lte7  div.flash #closeflash
 {color:expression(this.parentNode.currentStyle['color']);float:none;position:absolute;right:4px;}
 
-div.flash:hover { opacity:0.25; }
+div.flash:hover { opacity:0.6; }
 
 div.error_wrapper {display:block}
 div.error {
@@ -131,6 +165,10 @@ div.error {
     color:white;
     padding:5px;
     display:inline-block;
+    border-radius:8px;
+    -o-border-radius: 8px;
+    -moz-border-radius:8px;
+    -webkit-border-radius:8px;
     background-image: -webkit-linear-gradient(left,#f00,#fdd);
     background-image: -o-linear-gradient(left,#f00,#fdd);
     background-image: -moz-linear-gradient(0deg, #f00, #fdd);
