--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-
+<div class="flash flash-success">{{=response.flash or ''}}</div>
   <div class="page-header">
     <h1>{{=message}}<br><small>General Ledger</small></h1>
   </div>
