--- a/views/layout.html
+++ b/views/layout.html
@@ -282,7 +282,7 @@
                         <span class="b-icon-bar"></span>
                         <span class="b-icon-bar"></span>
                     </button>
-                    <button class="nav-toggler toggle-push-left navbar-brand" >
+                    <button class="nav-toggler toggle-push-left navbar-brand" style="margin-top:0px; margin-bottom:0px;" >
                       <span class="glyphicon glyphicon-align-justify"></span>
                     </button>                    
                     <a class="navbar-brand" href="{{=URL('default','index')}}">Datawork.mx</a>
