--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1994,7 +1994,8 @@ select[multiple].input-lg {
 .btn {
   display: inline-block;
   padding: 6px 12px;
-  margin-bottom: 0;
+  margin-top: 2px;
+  margin-bottom: 2px;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
