--- a/views/layout.html
+++ b/views/layout.html
@@ -164,6 +164,16 @@
                                 <tbody>
                                     <tr>
                                         <td>
+                                            <a href="{{=URL('default','index2')}}">Wizard Empresa</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <a href="{{=URL('wizard_cat_cuentas','index')}}">Wizard Catalogo de Cuentas</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
                                             <a href="#">Usuarios <span class="label label-success">42</span></a>
                                         </td>
                                     </tr>
