--- a/static/css/tabs.css
+++ b/static/css/tabs.css
@@ -7,17 +7,17 @@
 h1{
     color: #2980b9;
 }
-.row-header{
+.fila-cabecera{
     display:table-row;
     font-weight:900;
     color: #ffffff;
     background: #2980b9;
  }
-.row{
-   display: table-row;
+.fila{
+    display: table-row;
     background: #f6f6f6;
 }
-.row-odd{
+.fila-impar{
     display:table-row;
     background:#e9e9e9;
 }
@@ -28,23 +28,18 @@ h1{
 
 .table:hover{
 	color: transparent;
-	text-shadow: 0 0 3px #aaa;
+	-webkit-text-shadow: 0 0 3px #aaa;
+    text-shadow: 0 0 3px #aaa;
 }
 
-.row:hover{
+.fila:hover{
 	color: #444;
-	text-shadow: 0 1px 0 #fff;
-}
-.row:hover{
-	color: #444;
+    -webkit-text-shadow: 0 1px 0 #fff;
 	text-shadow: 0 1px 0 #fff;
 }
 
-.row-odd:hover{
+.fila-impar:hover{
 	color: #444;
-	text-shadow: 0 1px 0 #fff;
-}
-.row-odd:hover{
-	color: #444;
+    -webkit-text-shadow: 0 1px 0 #fff;
 	text-shadow: 0 1px 0 #fff;
 }
