--- a/views/layout.html
+++ b/views/layout.html
@@ -103,17 +103,17 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-success"><span class="glyphicon glyphicon-flash text-success"></span> Recientes</a>
+                                            <a href="#" class="text-muted"><span class="glyphicon glyphicon-flash text-muted"></span> Recientes</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-info"><span class="glyphicon glyphicon-question-sign"></span> Ayuda</a>
+                                            <a href="#"  class="text-muted"><span class="glyphicon glyphicon-question-sign"></span> Ayuda</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-success"><span class="glyphicon glyphicon-comment"></span> Mensajes <span class="badge">4</span></a>
+                                            <a href="#" class="text-muted"><span class="glyphicon glyphicon-comment"></span> Mensajes <span class="badge">4</span></a>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -134,12 +134,12 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <a href="#"><span class="glyphicon glyphicon-usd"></span> Balance general</a>
+                                            <a href="#" class="text-muted"><span class="glyphicon glyphicon-usd"></span> Balance general</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#"><span class="glyphicon glyphicon-tasks"></span> Balanza</a>
+                                            <a href="#" class="text-muted"><span class="glyphicon glyphicon-tasks"></span> Balanza</a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -174,26 +174,26 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Usuarios <span class="label label-success">42</span></a>
+                                            <a href="#" class="text-muted">Usuarios <span class="label label-muted">42</span></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Grupos</a>
+                                            <a href="#" class="text-muted">Grupos</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Permisos</a>
+                                            <a href="#" class="text-muted">Permisos</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>                                                        
-                                            <a href="#SubMenu1" data-toggle="collapse" data-parent="#SubMenu1">Empresa <b class="caret"></b></a>
+                                            <a href="#SubMenu1" class="text-muted" data-toggle="collapse" data-parent="#SubMenu1">Empresa <b class="caret"></b></a>
                                                 <div class="collapse list-group-submenu" id="SubMenu1">
                                                     <a href="{{=URL('empresa','listar')}}" class="list-group-item" data-parent="#SubMenu1">Sucursales</a>
-                                                    <a href="#" class="list-group-item" data-parent="#SubMenu1">Sucursales</a>
-                                                    <a href="#" class="list-group-item" data-parent="#SubMenu1">Departamentos</a>
+                                                    <a href="#" class="list-group-item text-muted" data-parent="#SubMenu1">Sucursales</a>
+                                                    <a href="#" class="list-group-item text-muted" data-parent="#SubMenu1">Departamentos</a>
                                                 </div>
                                         </td>
                                     </tr>
@@ -214,12 +214,12 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <a href="#">Empleados <span class="label label-success">42</span></a>
+                                            <a href="#" class="text-muted">Empleados <span class="label label-muted">42</span></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Proveedores</a>
+                                            <a href="#" class="text-muted">Proveedores</a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -229,7 +229,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Empresa</a>
+                                            <a href="#" class="text-muted">Empresa</a>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -240,7 +240,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><span class="glyphicon glyphicon-user"></span> Perfil <b class="caret"></b></a>
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" disabled="disabled"><span class="glyphicon glyphicon-user"></span> Perfil <b class="caret"></b></a>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse ">
@@ -249,17 +249,17 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <a href="#">Preferencias</a>
+                                            <a href="#" class="text-muted">Preferencias</a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#">Notificaciones <span class="label label-info">9</span></a>
+                                            <a href="#" class="text-muted" >Notificaciones <span class="label label-muted">9</span></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a href="#" class="text-danger"><span class="glyphicon glyphicon-trash text-danger"></span> Eliminar cuenta</a>
+                                            <a href="#" class="text-muted"><span class="glyphicon glyphicon-trash "></span> Eliminar cuenta</a>
                                         </td>
                                     </tr>
                                 </tbody>
